проверка тестера