@@ -1,19 +1,15 @@
 package ru.practicum.grpc;
 
-import io.grpc.StatusRuntimeException;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.devh.boot.grpc.client.inject.GrpcClient;
 import org.springframework.stereotype.Component;
-import ru.practicum.ewm.stats.proto.*;
+import ru.practicum.stats.service.dashboard.RecommendationsControllerGrpc;
+import ru.practicum.stats.service.dashboard.RecommendationsProto;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Spliterator;
-import java.util.Spliterators;
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 @Slf4j
@@ -22,91 +18,99 @@ import java.util.stream.StreamSupport;
 public class AnalyzerGrpcClient {
 
     @GrpcClient("analyzer")
-    private RecommendationsControllerGrpc.RecommendationsControllerBlockingStub analyzerStub;
+    private RecommendationsControllerGrpc.RecommendationsControllerBlockingStub stub;
 
-    public List<RecommendedEventProto> getRecommendationsForUser(Long userId, int maxResults) {
+    /**
+     * Получить рекомендации для пользователя
+     */
+    public List<RecommendedEvent> getRecommendationsForUser(Long userId, int maxResults) {
         try {
-            log.info("Запрос рекомендаций: userId={}, maxResults={}", userId, maxResults);
-
-            UserPredictionsRequestProto request = UserPredictionsRequestProto.newBuilder()
+            RecommendationsProto.UserPredictionsRequestProto request = RecommendationsProto.UserPredictionsRequestProto.newBuilder()
                     .setUserId(userId)
                     .setMaxResults(maxResults)
                     .build();
 
-            Iterator<RecommendedEventProto> iterator = analyzerStub.getRecommendationsForUser(request);
-            List<RecommendedEventProto> result = asStream(iterator).collect(Collectors.toList());
+            Iterator<RecommendationsProto.RecommendedEventProto> iterator = stub.getRecommendationsForUser(request);
+            List<RecommendedEvent> result = toStream(iterator)
+                    .map(this::toRecommendedEvent)
+                    .collect(Collectors.toList());
 
-            log.info("Получено {} рекомендаций", result.size());
+            log.info("Получено {} рекомендаций для пользователя {}", result.size(), userId);
             return result;
 
-        } catch (StatusRuntimeException e) {
-            log.error("Ошибка gRPC вызова Analyzer: status={}, message={}",
-                    e.getStatus().getCode(), e.getMessage());
-            return new ArrayList<>();
         } catch (Exception e) {
-            log.error("Ошибка получения рекомендаций: {}", e.getMessage(), e);
+            log.error("Ошибка получения рекомендаций для пользователя {}: {}", userId, e.getMessage(), e);
             return new ArrayList<>();
         }
     }
 
-    public List<RecommendedEventProto> getSimilarEvents(Long eventId, Long userId, int maxResults) {
+    /**
+     * Получить похожие мероприятия
+     */
+    public List<RecommendedEvent> getSimilarEvents(Long eventId, Long userId, int maxResults) {
         try {
-            log.info("Запрос похожих событий: eventId={}, userId={}", eventId, userId);
-
-            SimilarEventsRequestProto request = SimilarEventsRequestProto.newBuilder()
+            RecommendationsProto.SimilarEventsRequestProto request = RecommendationsProto.SimilarEventsRequestProto.newBuilder()
                     .setEventId(eventId)
-                    .setUserId(userId != null ? userId : 0)
+                    .setUserId(userId)
                     .setMaxResults(maxResults)
                     .build();
 
-            Iterator<RecommendedEventProto> iterator = analyzerStub.getSimilarEvents(request);
-            List<RecommendedEventProto> result = asStream(iterator).collect(Collectors.toList());
+            Iterator<RecommendationsProto.RecommendedEventProto> iterator = stub.getSimilarEvents(request);
+            List<RecommendedEvent> result = toStream(iterator)
+                    .map(this::toRecommendedEvent)
+                    .collect(Collectors.toList());
 
-            log.info("Получено {} похожих событий", result.size());
+            log.info("Получено {} похожих мероприятий для события {}", result.size(), eventId);
             return result;
 
-        } catch (StatusRuntimeException e) {
-            log.error("Ошибка gRPC вызова Analyzer: status={}, message={}",
-                    e.getStatus().getCode(), e.getMessage());
-            return new ArrayList<>();
         } catch (Exception e) {
-            log.error("Ошибка получения похожих событий: {}", e.getMessage(), e);
+            log.error("Ошибка получения похожих мероприятий для события {}: {}", eventId, e.getMessage(), e);
             return new ArrayList<>();
         }
     }
 
-    public List<RecommendedEventProto> getInteractionsCount(List<Long> eventIds) {
+    /**
+     * Получить сумму взаимодействий для списка мероприятий
+     */
+    public List<RecommendedEvent> getInteractionsCount(List<Long> eventIds) {
         if (eventIds == null || eventIds.isEmpty()) {
             return new ArrayList<>();
         }
 
         try {
-            log.info("Запрос взаимодействий для {} событий", eventIds.size());
-
-            InteractionsCountRequestProto request = InteractionsCountRequestProto.newBuilder()
-                    .addAllEventIds(eventIds)
+            RecommendationsProto.InteractionsCountRequestProto request = RecommendationsProto.InteractionsCountRequestProto.newBuilder()
+                    .addAllEventId(eventIds)
                     .build();
 
-            Iterator<RecommendedEventProto> iterator = analyzerStub.getInteractionsCount(request);
-            List<RecommendedEventProto> result = asStream(iterator).collect(Collectors.toList());
+            Iterator<RecommendationsProto.RecommendedEventProto> iterator = stub.getInteractionsCount(request);
+            List<RecommendedEvent> res = toStream(iterator)
+                    .map(this::toRecommendedEvent)
+                    .toList();
 
-            log.info("Получены взаимодействия для {} событий", result.size());
-            return result;
+            log.info("Получена сумма взаимодействий для мероприятий");
+            return res;
 
-        } catch (StatusRuntimeException e) {
-            log.error("Ошибка gRPC вызова Analyzer: status={}, message={}",
-                    e.getStatus().getCode(), e.getMessage());
-            return new ArrayList<>();
         } catch (Exception e) {
-            log.error("Ошибка получения взаимодействий: {}", e.getMessage(), e);
+            log.error("Ошибка получения суммы взаимодействий для мероприятий {}: {}", eventIds, e.getMessage(), e);
             return new ArrayList<>();
         }
     }
 
-    private Stream<RecommendedEventProto> asStream(Iterator<RecommendedEventProto> iterator) {
+    /**
+     * Преобразовать Iterator в Stream
+     */
+    private java.util.stream.Stream<RecommendationsProto.RecommendedEventProto> toStream(Iterator<RecommendationsProto.RecommendedEventProto> iterator) {
         return StreamSupport.stream(
                 Spliterators.spliteratorUnknownSize(iterator, Spliterator.ORDERED),
                 false
         );
     }
+
+    /**
+     * Преобразовать RecommendedEventProto в RecommendedEvent
+     */
+    private RecommendedEvent toRecommendedEvent(RecommendationsProto.RecommendedEventProto proto) {
+        return new RecommendedEvent(proto.getEventId(), proto.getScore());
+    }
+
 }
